<resources>
    <string name="app_name">KivaLearn</string>
    <string name="title_activity_login">" Log in"</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="html_text_1">
HTML content is 90% text\n
Html is more of text, you can observe most websites, you note that more of was you do in a website is reading.
\n\n<b>Paragraphs:</b>\n
Paragraphs <b>&lt;p&gt;</b> Tag are the most used HTML element, as they act as the default block-level element and are quick to write.\n\n
</string>
    <string name="html_text_2">
        \n\n<b>Lists:</b>
        \nLists come in 3 variations:
        \n<b>&lt;ul&gt;</b> are unordered lists
        \n<b>&lt;ol&gt;</b> are ordered lists (whose items are automatically numbered)
        \n<b>&lt;dl&gt;</b> are definition lists
        \n\nHTML lists require a specific structure:
        \n<b>&lt;li&gt;</b> stands for list items,it cannot stand alone it has to be inside either &lt;ul&gt; (unordered list tag)  &lt;ol&gt; (order list tag)
    </string>
    <string name="html_text_3">\n<b>Unordered lists:</b>
        \nThey are the most commonly used types of lists.
        \nThey are meant to group together a list of individual items, in no particular order.
    </string>
    <string name="html_text_4">
        \n\n<b>Ordered lists:</b>
        \nOrdered lists are used when the order of its items is relevant.
        \nThis is automatically read and arranged by the browser
    </string>
    <string name="html_text_5">
        \n\n<b>Definition lists:</b>
        \nDefinition lists are for items that come in pairs.
        \nThey must include pairs of &lt;dt&gt; definition terms and &lt;dd&gt; definition descriptions as direct children.
    </string>
    <string name="html_text_6">\n\n<b>Run:</b>
        \nWeb
        \nThe part of the Internet that contains websites and webpages
        \nHTML
        \nA markup language for creating webpages
        \nCSS
        \nA technology to make HTML look better
        \nDefinition lists are rarely used because their use cases are very specific, and only happen when the key changes every time. Tables with 2 columns are the more popular alternative.
    </string>
    <string name="html_text_7">
        \n\n<b>Blockquotes:</b>
        \nBlockquotes are used to identify a citation.
        \n<b>Example:</b>
    </string>
    <string name="html_text_8">
        \n\n<b>Headings:</b>
        \nThere are 6 levels of headings available, ranging from <b>&lt;h1&gt;</b> to <b>&lt;h6&gt;</b>\n
</string>
    <string name="css_basics_1">CSS is just like painting.
        \nIt involve styling your webpage, adding colors, margins, positions of a webpage’s elements.
        \nHTML is like a girl’s face  while CSS is the face Make up

        \n\n<b>Why CSS exists:</b>
        \nSeparating content and styling
        \nAs the Web grew in popularity in the 90s, the intent to apply a specific design to a website grew as well.
        \nWeb developers relied upon specific HTML tags to enhance webpages:

        \n\n<b>&lt;basefont&gt;</b> defined a font for a whole HTML document
        \n<b>&lt;font&gt;</b> defined a typeface, a color, and a size for the text it contains
        \n<b>&lt;center&gt;</b> horizontally centered all its content
        \n<b>&lt;big&gt;</b> increased the size of the text
        \n<b>&lt;strike&gt;</b> rendered text with a strike-through
        \n\nSeveral HTML attributes could also be used:

        \n<b>bgcolor</b> defined a background color on the element
        \n<b>text</b> defined the text color
        \nSeveral <b>margin</b> attributes could be used to add space on any side of the element

        \n\n<b>What CSS IS?</b>
        \nCSS stands for Cascading Style Sheets.
        \nIts purpose is to style markup languages (like HTML or XML).
        \nTherefore, CSS is worthless on its own, unless associated with an HTML document.

        \n<b>How CSS works:</b>
        \nHow CSS works is by selecting an HTML element (like a paragraph), choosing a property to alter (like the color), and applying a certain value (like red):\n
    </string>
    <string name="css_basics_2">\nThe word “Style” can be deceiving. You might think CSS is only used to change the text’s color, size, and font.
        \nBut CSS is able to define an HTML document’s layout, by defining heights, widths, inner and outer margins, positions and columns.
        \n\n<b>Where do I write CSS?</b>
        \nCSS as an attribute:
        \nYou can write CSS directly on an HTML elements, by using the style attribute:
    </string>
    <string name="css_basics_3">\nCSS in the &lt;head&gt;
        \nYou can use a <b>&lt;style&gt;</b> tag in the <b>&lt;head&gt;</b> of your HTML document:
    </string>
    <string name="css_basics_4">\nCSS in a separate file
        \nYou can write your CSS in a separate file with a .css extension, and then link it to your HTML by using the &lt;link&gt; HTML tag.
    </string>
    <string name="css_basics_5">\nIt is the HTML document who “calls” the CSS file, in this case a file called style.css located in the same folder as the HTML file.
        \nThis 3rd method of using a separate CSS file is preferred.
        \nWhy not style directly in the HTML?
        \nBecause we want to separate the content (HTML) from its presentation (CSS).
        \nIt makes maintenance easier as well: the same CSS file can be used for a whole website.
        \nIt provides flexibility: focus on the content on one side, the styling on the other. SEO purposes, different concerns.
    </string>
    <string name="css_priority_1">
        \nWhen several rules collide
        \nAn HTML element can be targeted by multiple CSS rules.
        \nLet’s use a simple paragraph for example:
    </string>
    <string name="css_priority_2">
        \nWe can alter this paragraph just by using its tag name:
    </string>
    <string name="css_priority_3">
        \nOr we can use its class name:
    </string>
    <string name="css_priority_4">
        \nOr we can use its id:
    </string>
    <string name="css_priority_5">
        \n\nBecause the browser can only pick one color to apply on this paragraph, it will have to decide which CSS rule takes priority over other ones.
        \nThis is what CSS priority (or CSS specificity is about).
        \nIn our example, the paragraph will be red because a #id selector is more specific and thus more important than other selectors.

        \n\n<b>Order of CSS rules:</b>
        \nIf similar selectors are in your CSS, the last one defined will take priority.
    </string>
    <string name="css_priority_6">
        \nThe 100 measure
        \nOne quick way to figure out how “powerful” a CSS rule is, is by measuring the specificity of the selectors:
        \n\n<b>#id</b> selectors are worth 100
        \n<b>.class</b> selectors are worth 10
        \n<b>tag</b> selectors are worth 1
        \nThe selector with the highest “score” will prevail, no matter the order in which the CSS rules appear.
    </string>
    <string name="css_priority_7">
        \nThe #introduction{ color: red;} rule is more specific than the others because ids must be unique throughout a webpage, and can thus only target one element.

        \n.message{ color: green;} can target any HTML element with a class="message" attribute, and is consequently less specific. Same goes for p{ color: blue;} which can target any HTML paragraph.

        \n<b>How to avoid conflicts:</b>
        \nWhile writing your CSS, it’s easy to write conflicting rules, where the same property is applied several times.

        \n\nTo avoid that:

        \nOnly use classes: use .introduction instead of #introduction, even if that element only appears once in your webpage
        \navoid applying multiple classes on a single HTML element: don’t write
        \n&lt;p class=&quot;big red important&quot;&gt;
        \nbut rather &lt;p class=&quot;title&quot;&gt; which is more semantically descriptive
        \ndon’t use inline styles like &lt;div style=&quot;background: blue;&quot;&gt;

    </string>
    <string name="css_size_1">Sizing for content and space
        \nThere are many CSS properties that require size units:

        \n<b>font-size</b> defines the size of the text
        \n<b>border-width</b> defines the weight of element borders
        \n<b>margin</b> defines the spacing between elements
        \n<b>left/right/top/bottom</b> allows to position and move elements
        \n\nThe most used units are:

        \npx for pixels
        \n% for percentage
        \nem for sizing relative to the parent’s font-size value.

        \n\n<b>Pixels:</b>
        \nBecause computer screens use pixels to display the content, it is the most common size unit in CSS.

        \nIt can be used to fix the width of an or set font size element:
    </string>
    <string name="css_size_2">
        Pixels in CSS are straightforward because they define absolute values: they are not affected by other inherited CSS properties.

        \nThey are also widely used for positioning and spacing purposes.

        \n\n<b>Percentages:</b>
        \nPercentages are relative units: they rely upon the element’s parent and/or ancestor.

        \nFor example, block-level elements like paragraphs naturally take up the whole width available.
        \nThe following CSS rule will resize them to half of the width available.

    </string>
    <string name="css_size_3">
        \nPercentages can help set other CSS properties, like text size:
    </string>
    <string name="css_size_4">
        \n\n<b>Em:</b>
        \nem is a relative unit: it depends upon the value of the element’s font-size.
        \nFor example, if the parent has a font-size of 20px and you apply font-size: 0.8em to a child element, this child element will render a font-size of 16px.
        \n\nDon’t confuse the em CSS size unit and the em CSS selector, which targets <b>&lt;em&gt;</b> HTML elements
        \nThe em unit is interesting as you define font sizes of HTML elements relative to one another.
        \nTo design a pleasing and easy to read webpage, you need consistent visual depth.
        \nFor example, you want your &lt;h1&gt; to be twice as big as your body text, your &lt;h2&gt; only 1.5 times as big, and your sidebar slightly smaller.
        \nThis could easily be achieved in CSS:
    </string>
    <string name="css_size_5">
        \nIf you decide to change the size of your body text, the relative sizes of your headings and sidebar will change accordingly, and your webpage will remain visually balanced.
        \nBy just changing one value, all other values are altered:
    </string>
    <string name="css_size_6">
        \n<b>Rem</b>
        \nThe rem unit is similar to em, but instead of depending upon the parent’s value, it relies upon the root element’s value, which is the &lt;html&gt; element.

    </string>
    <string name="css_size_7">
        \nThe difference between rem and em is that rem values are fixed while em values can multiply between each other.

        \nIf you set your html{ font-size: 18px;}:

        \n2rem will always be equal to 36px, no matter where you use in your CSS
        \n2em will always be equal to double the parent’s font-size, so not necessarily 36px
        \nQuick example where 2em is different from 2rem:
    </string>
    <string name="css_size_8">
        \nThe span rely upon the p font-size value while the strong rely upon the html font-size value.

        \n<b>Which unit to use?</b>
        \nI’d recommend pixels to start with: as they’re absolute values, they aren’t affected by the element’s context. They are straightforward, allow to set the text size, image dimensions, border width, position coordinates…

        \nPercentage and em values can be used alongside pixels, for relative text sizes especially.
    </string>
</resources>