<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.julitech.brykiva.courses.html.hLesson6Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HTML Text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_1" />


        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_3" />


        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_4" />


        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_5" />

        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_7"/>
        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/html_text_8"/>
        <br.tiagohm.codeview.CodeView
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"
            android:id="@+id/code6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>
