<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".courses.css.cLesson7Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CSS Size units" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_1" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code1"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_2" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code2"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_3" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code3"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_4" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code4"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_5" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code5"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_6" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code6"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_7" />
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code7"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_size_8" />
    </LinearLayout>


</ScrollView>