<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".courses.css.cLesson5Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="CSS Priority"
            style="@style/TitleText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_1"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code1"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_2"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code2"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_3"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code3"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_4"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code4"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_5"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code5"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_6"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code6"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_priority_7"/>
    </LinearLayout>


</ScrollView>