<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.julitech.brykiva.courses.css.cLesson1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CSS Basics"
            style="@style/TitleText"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_basics_1"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code1"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_basics_2"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code2"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_basics_3"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code3"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_basics_4"/>
        <br.tiagohm.codeview.CodeView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/code4"
            app:cv_font_size="14"
            app:cv_show_line_number="false"
            app:cv_wrap_line="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/css_basics_5"/>
    </LinearLayout>

</ScrollView>
